# vanilla-room

./: CLAUDE.md  Cargo.toml
docs/: DESIGN.md  PLAN.md
personas/: architect.toml  database_expert.toml  developer.toml  devops.toml  profiler.toml  researcher.toml  reviewer.toml  security.toml  technical_writer.toml  tester.toml
playbooks/: bugfix.toml  documentation.toml  feature.toml  investigation.toml  refactor.toml
src/: agent.rs  conductor.rs  context.rs  discussion.rs  git_workspace.rs  main.rs  parser.rs  persona.rs  playbook.rs  recruiter.rs  state.rs  types.rs
